--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 
 # Install with: `pip install -r requirements.txt`
 
-Django >= 1.8
+Django >= 1.8.2
 
-# psycopg2
+psycopg2
 
-markdown
+markdown >= 2.6.2
+
