--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 
-# Install with: `pip install -r requirements.txt`
+# Install with: `sudo pip install -r requirements.txt`
 
 Django >= 1.8.2
 
@@ -7,3 +7,8 @@ psycopg2
 
 markdown >= 2.6.2
 
+django-haystack >= 2.4.0
+
+whoosh >= 2.7.0
+
+jieba >= 0.36.2
