--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,8 @@ repository/repository/config/__pycache__/*.pyc
 
 */__pycache__/*.pyc
 
-repository/*/migrations/
+
+repository/repository/apps/*/migrations/
 
 repository/whoosh_index/
 
